# competition-label-affinity

./: .gitignore  01.1_plot_protein_needed_vs_ligand_kd.py  01.2_plot_singal_vs_ligand_kd_fixed_inhibitor.py  01_ligandbound_vs_inhibitorKD.py  01_plot_protein_needed_vs_ligand_kd.py  01_plot_singal_vs_ligand_kd_fixed_inhibitor.py  01_simulate_competition_experiment.py  02_inhibitorKD_vs_fractionBound.py  02_inhibitorKD_vs_fractionBound_animation.py  02_inhibitorKD_vs_fractionBound_interactive.py  02_ligandKD_vs_fractionBound.py  02_ligandKD_vs_fractionBound_animation.py  02_ligandKD_vs_fractionBound_interactive.py  03_ligandKD_vs_fractionBoundAsPercentSignalReduction.py  03_missed_inhibitors.py  04_missed_inhibitors.py  05_KDPL_vs_FLB_VaryingTargetFLB.py  05_ligandKD_vs_fractionBoundVaryingTargetFraction.py  06_KDPL_vs_FLB_VaryingL0.py  06_ligandKD_vs_fractionBoundVaryingAmountLigand.py  07_HuangPlot.py  07_KDPL_vs_FLB_VaryingI0.py  08_HuangPlot.py  09_KDPL_vs_FLB_VaryingL0AndTFLB.py  10_3D_KDPL_vs_KDPI_vs_FLB.py  10_Contour_KDPL_vs_KDPI_vs_FLB.py  10_Low_FLB_system_ligandKD_vs_fractionBound.py  10_write_lookup_table.py  README.md  example_01_plot_protein_needed_vs_ligand_kd.py  example_01_plot_singal_vs_ligand_kd_fixed_inhibitor.py  example_01_simulate_competition_experiment.py  example_02_inhibitorKD_vs_fractionBound.py  example_02_ligandKD_vs_fractionBound.py  example_03_ligandKD_vs_fractionBoundAsPercentSignalReduction.py  example_04_missed_inhibitors.py  high_accuracy_binding_equations.py  pyproject.toml  setup.cfg
claffinity/: __init__.py  (+2 more)
(+13 files in other folders)
