[metadata]
name = claffinity
version = 1.0.2
description = A tool for investigating the impact of labelled ligand affinity in competition experiments.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = competition, label, ligand
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7

[options]
packages =
    .claffinity
install_requires =
    matplotlib
    numpy>=1.15
    pandas>=1.2.2
    mpmath>=1.1.0
    progressbar2

[tool:pytest]
testpaths=test
